# prashnam-voice

./: .gitignore  PLAN.md  README.md  index.html  install.py  pyproject.toml
browser-prep/: README.md
browser-prep/docs/: risk-gate-findings.md
browser-prep/scripts/: 01_export_onnx.py
docs/: python-api.md  rest-api.md
examples/: announcements.csv  polls.csv
guide/: README.md  build.py  index.html
prashnam_voice/: app_config.py  audio.py  cache.py  cli.py  config.py  csv_import.py  domains.py  engines.py  onboarding.py  pipeline.py  projects.py  public.py  text_normalize.py  translator.py  tts.py
prashnam_voice/adapters/: __init__.py  base.py
prashnam_voice/adapters/local/: __init__.py  translator.py  tts.py
prashnam_voice/adapters/sarvam/: __init__.py  _common.py  translator.py  tts.py
prashnam_voice/server/: app.py
prashnam_voice/server/static/: app.js  docs.css  docs.html  docs.js  index.html  onboarding.css  onboarding.html  onboarding.js  style.css
tests/: test_adapters.py  test_cache.py  test_config.py  test_csv_import.py  test_domains.py  test_ivr.py  test_onboarding.py  test_overrides_and_download.py  test_projects.py  test_public_api.py  test_rotations.py  test_server_basic.py  test_text_normalize.py
